tests/fail/parser-import5.dit
import Test from "https://raw.githubusercontent.com/isaiahshiner/dits/master/dits/ClearlyNotADit.dit";

A {}